Added Login screen to authentication module, set login screen as start up page and changed favicon.

--- a/src/app/modules/authentication/authentication.component.html
+++ b/src/app/modules/authentication/authentication.component.html
@@ -1,14 +1,18 @@
-<!-- <p>
-  authentication works!
-</p> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 
-
-<!-- <div class="wrapper">
- 
-  <div>
-     
-      <router-outlet></router-outlet>
-      
+<div class="container-fluid">
+  <div class="row no-gutter">
+    <div class="d-none d-md-flex col-md-6 col-lg-6 bg-image"></div>
+    <div class="col-md-6 col-lg-6">
+      <div class="login d-flex align-items-center py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-9 col-lg-8 mx-auto card card-stats">
+              <router-outlet></router-outlet>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div> -->
+</div>
