Removed warning to refer to background image for authentication module in scss file - postcss.

--- a/src/app/modules/authentication/authentication.component.scss
+++ b/src/app/modules/authentication/authentication.component.scss
@@ -6,7 +6,7 @@
   }
   
   .bg-image {
-    background-image: url('assets/img/Login3.jpg');
+    background-image: url('/assets/img/Login3.jpg');
     background-size: cover;
     background-position: center;
     max-width: 100%;
