--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,15 +19,47 @@
                     </button>
                 </div>
             </form>
+
+
             <ul class="navbar-nav">
-                <li class="nav-item">
+
+                <form>
+
+                    <mat-form-field>
+                        <mat-label *ngIf="!selectedProgram">Programs</mat-label>
+                        <mat-select [disableOptionCentering]='true' [(ngModel)]="selectedProgram" name="food">
+                            <mat-option *ngFor="let food of foods" [disabled]='food.disabled' [value]="food.id">
+                                {{food.value}}
+                            </mat-option>
+                        </mat-select>
+                        <!-- <mat-hint *ngIf="selectedProgram">Select Program</mat-hint> -->
+                    </mat-form-field>
+                                    
+                </form>
+
+                <!-- <form>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{selectedProgram}}
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </div>
+                </form> -->
+
+                <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/dashboard">
                         <i class="material-icons">dashboard</i>
                         <p>
                             <span class="d-lg-none d-md-block">Stats</span>
                         </p>
                     </a>
-                </li>
+                </li> -->
+
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#pablo" id="navbarDropdownMenuLink" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
