--- a/src/app/modules/admin-layout/admin-layout.component.html
+++ b/src/app/modules/admin-layout/admin-layout.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="sidebar" data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+    <div class="sidebar" data-color="azure" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
         <app-sidebar></app-sidebar>
         <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
     </div>
@@ -11,3 +11,6 @@
         </div>
     </div>
 </div>
+
+<!-- data-color maybe  red, purple, azure etc -->
+<!-- data-background-color can be black,white -->
