Add user and Add programs Screens, Create new user, Create New program Pop ups.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,13 +26,13 @@
                 <form>
 
                     <mat-form-field>
-                        <mat-label *ngIf="!selectedProgram">Programs</mat-label>
+                        <mat-label *ngIf="selectedProgram">Programs</mat-label>
                         <mat-select [disableOptionCentering]='true' [(ngModel)]="selectedProgram" name="food">
                             <mat-option *ngFor="let food of foods" [disabled]='food.disabled' [value]="food.id">
                                 {{food.value}}
                             </mat-option>
                         </mat-select>
-                        <!-- <mat-hint *ngIf="selectedProgram">Select Program</mat-hint> -->
+                        <mat-hint *ngIf="!selectedProgram">Select Program</mat-hint>
                     </mat-form-field>
                                     
                 </form>
