--- a/src/app/modules/admin-layout/views/table-list/table-list.component.html
+++ b/src/app/modules/admin-layout/views/table-list/table-list.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<!-- <div class="main-content">
   <div class="container-fluid">
       <div class="row">
           <div class="col-md-12">
@@ -138,4 +138,75 @@
           </div>         
       </div>
   </div>
+</div> -->
+
+
+
+<div class="main-content">
+
+    <div class="container-fluid">
+
+        <!-- <button (click)="openDialog()" mat-raised-button class="btn btn-primary float-right">Add User</button>
+            <button (click)="openDialogAddNewClient()" mat-raised-button class="btn btn-success float-right">Add Client</button> -->
+        <button (click)="openDialogAddNewUser()" mat-raised-button class="btn btn-success">Add User</button>
+
+        <div class="example-container mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort>
+
+                <!-- Id Column -->
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+                    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+                </ng-container>
+
+                <!-- Client Column -->
+                <ng-container matColumnDef="client">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Client </th>
+                    <td mat-cell *matCellDef="let element"> {{element.client}} </td>
+                </ng-container>
+
+                <!-- Program Column -->
+                <ng-container matColumnDef="program">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Program </th>
+                    <td mat-cell *matCellDef="let element"> {{element.program}} </td>
+                </ng-container>
+
+                <!-- First Name Column -->
+                <ng-container matColumnDef="firstName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+                </ng-container>
+
+
+                <!-- Last Name Column -->
+                <ng-container matColumnDef="lastName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+                </ng-container>
+
+                <!-- Email Id Column -->
+                <ng-container matColumnDef="emailId">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Email Id </th>
+                    <td mat-cell *matCellDef="let element"> {{element.emailId}} </td>
+                </ng-container>
+
+                <!-- Role Column -->
+                <ng-container matColumnDef="role">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+                    <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+                </ng-container>
+
+                <!-- Queue Assignment Column -->
+                <ng-container matColumnDef="queueAssignment">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Queue Assignment </th>
+                    <td mat-cell *matCellDef="let element"> {{element.queueAssignment}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+
+        </div>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    </div>
 </div>
