--- a/src/app/modules/admin-layout/views/typography/typography.component.html
+++ b/src/app/modules/admin-layout/views/typography/typography.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<!-- <div class="main-content">
   <div class="container-fluid">
     <div class="card">
         <div class="card-header card-header-danger">
@@ -94,5 +94,50 @@
                 </div>
             </div>
         </div>
+    </div>
+</div> -->
+
+
+<div class="main-content">
+
+    <div class="container-fluid">
+
+        <!-- <button (click)="openDialog()" mat-raised-button class="btn btn-primary float-right">Add User</button>
+        <button (click)="openDialogAddNewClient()" mat-raised-button class="btn btn-success float-right">Add Client</button> -->
+        <button (click)="openDialogAddNewProgram()" mat-raised-button class="btn btn-success">Add Program</button>
+
+        <div class="example-container mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort>
+
+                <!-- Position Column -->
+                <ng-container matColumnDef="position">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">  
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+
+                <!-- Client Column -->
+                <ng-container matColumnDef="client">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Client </th>
+                    <td mat-cell *matCellDef="let element"> {{element.client}} </td>
+                </ng-container>
+
+                <!-- Description Column -->
+                <ng-container matColumnDef="description">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+                    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+
+        </div>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </div>
 </div>
